--- a/eye2d.app_data/eye2d.app_data.csproj
+++ b/eye2d.app_data/eye2d.app_data.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eye2d.webapp\eye2d.webapp.csproj" />
+  </ItemGroup>
+
 </Project>
